<resources>
    <string name="app_name">Lesson_16</string>
    <string name="log_in">Log in</string>
    <string name="spiice">Spiice</string>
    <string name="discover_the_platform">Discover the platform</string>
    <string name="you_have_an_account">You have an account?</string>
    <string name="sign_up">Sign-up</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="return_to_sign_up">Return to Sign-up</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>