<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".SignUpFragment">


    <ImageView
        style="@style/backgroundimage"
        android:src="@drawable/bubbles"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/transparent_background"
        android:orientation="vertical"
        android:padding="@dimen/padding_30"
        android:gravity="top"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/regButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/padding_30">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textSize="@dimen/text_font_48"
            android:textColor="@android:color/black"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/margin_48"/>

        <EditText
            android:id="@+id/firstNameEditText"
            android:hint="@string/first_name"
            style="@style/edittext"/>

        <EditText
            android:id="@+id/lastNameEditText"
            android:hint="@string/last_name"
            style="@style/edittext"/>

        <EditText
            android:id="@+id/emailEditText"
            android:hint="@string/email"
            style="@style/edittext"/>

        <EditText
            android:id="@+id/passwordEditText"
            android:hint="@string/password"
            android:inputType="textPassword"
            style="@style/edittext"
            />

    </LinearLayout>


    <Button
        android:id="@+id/regButton"
        android:layout_width="263dp"
        android:layout_height="54dp"
        android:text="@string/sign_up"
        app:layout_constraintTop_toBottomOf="@id/linearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bottomTextLayout"
        style="@style/buttonreg" />


    <LinearLayout
        android:id="@+id/bottomTextLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="65dp"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/textView1"
            android:text="@string/you_have_an_account"
            style="@style/thintext" />

        <TextView
            android:id="@+id/textView2"
            android:text="@string/log_in"
            style="@style/boldtext" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
