<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LoginActivity">

    <!-- Фоновое изображение -->
    <ImageView
        android:src="@drawable/bubbles"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/backgroundimage" />

    <!-- Полупрозрачный LinearLayout в центре экрана -->
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/transparent_background"
        android:orientation="vertical"
        android:padding="@dimen/padding_30"
        android:gravity="top"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/loginButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="32dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:textSize="@dimen/text_font_48"
            android:textColor="@android:color/black"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/margin_16"/>

        <EditText
            android:id="@+id/emailEditText"
            android:hint="@string/email"
            style="@style/edittext"/>

        <EditText
            android:id="@+id/passwordEditText"
            android:hint="Password"
        android:inputType="textPassword"
            style="@style/edittext" />

    </LinearLayout>

    <!-- Кнопка регистрации -->
    <Button
        android:id="@+id/loginButton"
        android:layout_width="263dp"
        android:layout_height="54dp"
        android:text="@string/log_in"
        app:layout_constraintTop_toBottomOf="@id/linearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bottomTextLayout"
        style="@style/buttonreg" />

    <!-- Линейный лейаут для текста внизу -->
    <LinearLayout
        android:id="@+id/bottomTextLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="65dp"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/returntext"
            android:text="@string/return_to_sign_up"
            style="@style/thintext"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
